--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "nunjucks": "^3.2.4"
   },
   "scripts": {
-    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
+    "start": "node .",
+    "dev": "nodemon . & yarn scss",
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "sass": "sass --watch src/scss/style.sass:public/style.css"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22"
   }
 }
