--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "src/app.js",
+  "exports": "./src/frontend.js",
   "license": "MIT",
   "type": "module",
   "dependencies": {
