--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
-  "version": "1.0.0",
-  "main": "src/app.js",
+  "name": "evno-frontend",
+  "version": "0.0.1",
+  "main": "./src/app.js",
   "exports": "./src/frontend.js",
   "license": "MIT",
   "type": "module",
@@ -10,13 +10,15 @@
     "express": "^4.18.2",
     "n3": "^1.16.4",
     "node-sass-middleware": "^1.0.1",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "release-it": "^15.10.3"
   },
   "scripts": {
     "start": "node .",
     "dev": "nodemon . & yarn scss",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
-    "sass": "sass --watch src/scss/style.sass:public/style.css"
+    "sass": "sass --watch src/scss/style.sass:public/style.css",
+    "release": "release-it"
   },
   "devDependencies": {
     "jest": "^29.5.0",
