--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evno-frontend",
   "version": "0.1.0",
-  "main": "./src/app.js",
+  "main": "./src/frontend.js",
   "exports": "./src/frontend.js",
   "license": "MIT",
   "type": "module",
